[project]
name = "mobility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.4",
    "geopy>=2.4.1",
    "matplotlib>=3.10.0",
    "shapely>=2.0.7",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.0",
]
